# GrabKeyLib

./: CMakeLists.txt  README.md  ROADMAP.md
include/: epoll_kbd_poller.h  events_config.h  events_filter.h  events_processor.h  events_processor_impl.h  kbd_key_parser.h  kbd_keys.h  kbd_poller.h  kbd_reader.h  kbd_reader_impl.h  kbd_reader_mode.h  kqueue_kbd_poller.h  raw_mode.h
src/: epoll_kbd_poller.cpp  events_processor.cpp  events_processor_impl.cpp  kbd_key_parser.cpp  kbd_poller.cpp  kbd_reader.cpp  kbd_reader_impl.cpp  kqueue_kbd_poller.cpp  raw_mode.cpp
